# distributed-counter-demo

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
demo/: Cargo.toml
demo/src/: main.rs
scripts/: node-entrypoint.sh  wait-for-keys.sh
