[package]
name = "tashi-vertex-4node-demo"
version = "0.1.0"
edition = "2024"

# Produce two binaries:
# - tashi-demo-node   (main.rs)
# - tashi-demo-keygen (bin/keygen.rs)
[[bin]]
name = "tashi-demo-node"
path = "src/main.rs"

[[bin]]
name = "tashi-demo-keygen"
path = "src/bin/keygen.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Path dependency to the cloned upstream crate
# Dockerfile places upstream at /work/upstream and this crate at /work/demo
tashi-vertex = { path = "../upstream" }
